[package]
name = "minimal-template-node"
description = "A minimal Substrate-based Substrate node, ready for hacking."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
docify = { workspace = true }
clap = { features = ["derive"], workspace = true }
futures = { features = ["thread-pool"], workspace = true }
futures-timer = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
serde_json = { workspace = true, default-features = true }
polkadot-sdk = { workspace = true, features = [
	"sp-core",
	"sp-runtime",
	"sp-api",
	"sp-consensus",
	"sp-blockchain",
	"sp-inherents",
	"sp-timestamp",
	"sc-executor",
	"sc-client-api",
	"sc-consensus",
	"sc-service",
	"sc-telemetry",
	"sc-transaction-pool",
	"sc-transaction-pool-api",
	"sc-network",
	"sc-basic-authorship",
	"sc-cli",
	"sc-offchain",
	"sc-consensus-manual-seal",
	"substrate-frame-rpc-system",
] }
minimal-template-runtime.workspace = true
log = "0.4"
tokio = { version = "1.0", features = ["rt-multi-thread", "time"] }
async-trait = "0.1.77"

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = ["std"]
std = [
	"minimal-template-runtime/std",
	"polkadot-sdk/std",
]

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
